openshift/log-detective.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: logdetective-website
spec:
  selector:
    matchLabels:
      component: log-detective-website
  template:
    metadata:
      labels:
        component: log-detective-website
    spec:
      volumes:
        - name: persistent
          persistentVolumeClaim:
            claimName: persistent
      containers:
        - name: logdetective-website
          image: quay.io/logdetective/website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: persistent
              mountPath: /persistent
          resources:
            requests:
              memory: "1600Mi"
              cpu: "50m"
            limits:
              memory: "3200Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /docs
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Purpose
                  value: Startup-Probing
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Purpose
                  value: Readiness-Probing
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /docs
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Purpose
                  value: Liveness-Probing
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          command: ["gunicorn"]
          args: [
            "-c",
           "/src/gunicorn.conf.py",
           "api:app"]
  replicas: 1
  strategy:
    type: Recreate
---
kind: Service
apiVersion: v1
metadata:
  name: logdetective-website
spec:
  ports:
    - name: logdetective-website
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    component: log-detective-website
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logdetective-ingress
  annotations:
    # cert-manager operator will handle renewal of the production certificate
    cert-manager.io/issuer: "letsencrypt-production"
    # Redirect all HTTP traffic to HTTPS
    ingress.kubernetes.io/ssl-redirect: "true"
    # default is 30s, server worker timeout is 600s, most requests finish in 60s
    haproxy.router.openshift.io/timeout: 600s
spec:
  tls:
    - hosts:
        - log-detective.com
        - www.log-detective.com
        - logdetective.com
        - www.logdetective.com
      # cert-manager creates this secret automatically
      secretName: logdetective-production-tls
  rules:
    - host: log-detective.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logdetective-website
                port:
                  number: 8080
    - host: www.log-detective.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logdetective-website
                port:
                  number: 8080
    - host: logdetective.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logdetective-website
                port:
                  number: 8080
    - host: www.logdetective.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logdetective-website
                port:
                  number: 8080
